# cuprum-editor

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api-macro/: Cargo.toml
crates/api-macro/src/: lib.rs
crates/api/src/: lib.rs
crates/builtin/: Cargo.toml
crates/builtin/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: action.rs  buffer.rs  cursor.rs  input.rs  lib.rs  managers.rs  render.rs  state.rs  window.rs
crates/editor/src/buffer/: file.rs  mod.rs
crates/editor/src/ui/: commands.rs  input.rs  mod.rs  render.rs
crates/editor/src/window/: mod.rs
crates/plugin-manager/: Cargo.toml
crates/plugin-manager/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  term.rs  vec2.rs
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: main.rs
scripts/: build.sh
src/: action.rs  lib.rs  log.rs  main.rs
src/buffer/: content.rs  mod.rs
src/ui/: commands.rs  render.rs
src/window/: mod.rs
