[workspace]
resolver = "3"
members = ["crates/editor", "crates/utils"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["yutadev31"]
repository = "https://github.com/yutadev31/cuprum-editor.git"

[workspace.dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
chrono = "0.4.42"
crossterm = "0.29.0"
fern = "0.7.1"
log = "0.4.28"

editor.path = "crates/editor"
utils.path = "crates/utils"

[package]
name = "cuprum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
fern.workspace = true
log.workspace = true

editor.workspace = true
