[workspace]
resolver = "3"
members = ["crates/api", "crates/builtin", "crates/editor", "crates/utils"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["yutadev31"]
repository = "https://github.com/yutadev31/cuprum-editor.git"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
chrono = "0.4.42"
crossterm = "0.29.0"
fern = "0.7.1"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.89"

api.path = "crates/api"
builtin.path = "crates/builtin"
editor.path = "crates/editor"
utils.path = "crates/utils"

[package]
name = "cuprum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
fern.workspace = true
log.workspace = true
tokio.workspace = true

editor.workspace = true
