[workspace]
resolver = "3"
members = [
  "crates/api",
  "crates/api-macro",
  "crates/builtin",
  "crates/plugin-manager",
  "crates/utils",
  "plugins/example-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["yutadev31"]
repository = "https://github.com/yutadev31/cuprum-editor.git"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
chrono = "0.4.42"
crossterm = "0.29.0"
fern = "0.7.1"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.89"
home = "0.5.11"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
ropey = "1.6.1"
api.path = "crates/api"
builtin.path = "crates/builtin"
utils.path = "crates/utils"
plugin-manager.path = "crates/plugin-manager"

[package]
name = "cuprum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
fern.workspace = true
log.workspace = true
tokio.workspace = true
api.workspace = true
builtin.workspace = true
crossterm.workspace = true
utils.workspace = true
plugin-manager.workspace = true
ropey.workspace = true
