[package]
name = "plugin-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
home.workspace = true
api.workspace = true
serde_json.workspace = true
log.workspace = true
